netcfg (1.03) UNRELEASED; urgency=low

  * Joshua Kwan
    - mii-diag support is back, but once again, as a function. Hopefully
      it works better than the old one. This time, it only chooses a
      default interface based on the first connected one it finds.
    - Apply Andrew Pollock's WEP key patch. Thanks!
  * Thomas Hood
    - Use "wireless-key1" option in /e/n/i rather than "wireless-key"
      since the former allows the key string to contain whitespace
      whereas the latter does not.  (Closes: #271978)

 -- Joshua Kwan <joshk@triplehelix.org>  Sun, 12 Sep 2004 20:48:48 -0700

netcfg (1.02) unstable; urgency=low

  * Colin Watson
    - Ask netcfg/get_nameservers at priority critical; if you're doing
      static network configuration, you probably need to be asked this.
  * Joshua Kwan
    - Rip out mii-diag support. Incidentally, this closes the 'Go Back'
      bugs regarding a template that now no longer exists.
      (Closes: #269081, #269236)
    - Code consolidation - don't duplicate the code that writes resolv.conf
  * Thomas Hood
    - Change function of backup button from netcfg/dhcp_options so that
      instead of causing an exit from netcfg it backs up to the
      choose-interface question (if there is more than one interface)
      (Closes: #269081)
  * Joey Hess
    - Remove mii-diag-udeb dependencies, which were bogus even before mii-diag
      support was removed.
    - Allow netcfg/choose_interface to be preseeded to just an interface name,
      don't choke on the lack of a colon after it.
  * Updated translations: 
    - Arabic (ar.po) by Ossama M. Khayat
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bosnian (bs.po) by Safir Šećerović
    - Catalan (ca.po) by Jordi Mallach
    - Czech (cs.po) by Miroslav Kure
    - Welsh (cy.po) by Dafydd Harries
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by Greek Translation Team